增加表單元件及樣式，更新多語言支持

--- a/i18n/language/en.json
+++ b/i18n/language/en.json
@@ -1,4 +1,14 @@
 {
   "welcome": "Welcome",
-  "test": "Test"
+  "test": "Test",
+  "action": "Action",
+  "name": "Name",
+  "age": "Age",
+  "edit": "Edit",
+  "add": "Add",
+  "delete": "Delete",
+  "confirm": "Confirm",
+  "cancel": "Cancel",
+  "confirm_msg": "Are you sure you want to {0} this item?",
+  "no_data": "No data available"
 }
