新增 EDialog 和 EDropdown 元件，調整 UI

--- a/i18n/language/en.json
+++ b/i18n/language/en.json
@@ -9,6 +9,6 @@
   "delete": "Delete",
   "confirm": "Confirm",
   "cancel": "Cancel",
-  "confirm_msg": "Are you sure you want to {0} this item?",
+  "confirm_msg": "Are you sure you want to {type} this item?",
   "no_data": "No data available"
 }
